{{$NEXT}}

2.027     2014-12-10 22:34:10+01:00 Europe/Prague

Drivers:
* HU::Conll

Interface:
* FeatureStructure has new methods is_active() and is_passive().



2.026     2014-12-05 18:56:03+01:00 Europe/Prague

Drivers:
* HI::Conll
* DE::Smor

Interface:
* FeatureStructure has new method set_other_subfeature().



2.025     2014-11-24 17:43:29+01:00 Europe/Prague

Features:
* New value 'int' of the feature 'voice': intensive voice/aspect (the PIEL binyan) in Hebrew.

Drivers:
* HE::Conll



2.024     2014-11-21 17:24:35+01:00 Europe/Prague

Features:
* New value 'opt' of the feature 'mood': optative mood in Ancient Greek and Turkish, to express wishes:
  "May you have a long life!" "If only I were rich!"
* New value 'des' of the feature 'mood': desiderative mood in Turkish: "He wants to come."
* New value 'nec' of the feature 'mood': necessitative mood in Turkish: "He must come. He should come."
* New value 'mid' of the feature 'voice': middle voice in Ancient Greek. (The mediopassive voice can be expressed as 'mid|pass'.)
* New value 'rcp' of the feature 'voice': reciprocal (Turkish "karıştı", "tutuştular")
* New value 'cau' of the feature 'voice': causative (Turkish "karıştırıyor" ("is confusing"))

Drivers:
* GRC::Conll



2.023     2014-11-21 10:44:50+01:00 Europe/Prague

Drivers:
* FI::Turku



2.022     2014-11-18 22:56:53+01:00 Europe/Prague

Features:
* New value 'exc' of the feature 'prontype': exclamative determiner or pronoun (e.g. "WHAT a surprise!")

Drivers:
* FA::Conll



2.021     2014-11-17 01:04:13+01:00 Europe/Prague

Features:
* New features for the multi-argument agreement of Basque synthetic verbs:
  * absperson, absnumber, abspoliteness
  * ergperson, ergnumber, ergpoliteness, erggender
  * datperson, datnumber, datpoliteness, datgender

Drivers:
* ET::Puudepank
* EU::Conll

Interface:
* FeatureStructure has new methods is_masculine(), is_feminine(), is_neuter(), is_common_gender(),